--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ THEME=https://raw.githubusercontent.com/SalemElatar/salem-obsidian-theme/HEAD/th
 BASE_THEME=dark
 dgHomeLink=true
 dgPassFrontmatter=false
-dgShowBacklinks=false
+dgShowBacklinks=true
 dgShowLocalGraph=false
 dgShowInlineTitle=true
 dgShowFileTree=false
